--- a/public/student-dashboard.html
+++ b/public/student-dashboard.html
@@ -322,11 +322,11 @@
 
                     <div class="container-fluid page__container">
 
-                        <div class="alert alert-soft-warning d-flex align-items-center card-margin" role="alert">
+                        <!--<div class="alert alert-soft-warning d-flex align-items-center card-margin" role="alert">
                             <i class="material-icons mr-3">error_outline</i>
                             <div class="text-body">You have <strong>5 days left</strong> to submit {assignment name here} </div>
                             <a href="" class="btn btn-warning ml-auto">Go to assignment</a>
-                        </div>
+                        </div>-->
 
                         <div class="row">
                             <div class="col-lg-7">
@@ -368,7 +368,7 @@
                                     </ul>
                                 </div>
 
-                                <div class="card">
+                                <!--<div class="card">
                                     <div class="card-header card-header-large bg-light d-flex align-items-center">
                                         <div class="flex">
                                             <h4 class="card-header__title">Recent Assignments</h4>
@@ -435,11 +435,11 @@
                                         </li>
 
                                     </ul>
-                                </div>
+                                </div>-->
                             </div>
                             <div class="col-lg-5">
                                 <!-- START ACTIVITY -->
-                                <div class="card">
+                                <!--<div class="card">
                                     <div class="card-header card-header-large bg-white d-flex align-items-center">
                                         <h4 class="card-header__title flex m-0">Recent Activity</h4>
                                         <div class=" flatpickr-wrapper flatpickr-calendar-right d-flex ml-auto">
@@ -763,7 +763,7 @@
                                         </div>
                                         <div class="tab-pane" id="activity_quotes"></div>
                                     </div>
-                                </div>
+                                </div>-->
                                 <!-- END ACTIVITY -->
 
                                 <!-- 
