updates to hotbar

--- a/public/author-courses.html
+++ b/public/author-courses.html
@@ -586,7 +586,6 @@
                             </a>
                         </li>
                     </ul>
-
                     <div class="sidebar-heading">Student</div>
                     <div class="sidebar-block p-0">
                         <ul class="sidebar-menu mt-0">
@@ -602,7 +601,7 @@
                                     <span class="sidebar-menu-text">Courses</span>
                                 </a>
                             </li>
-                            <li class="sidebar-menu-item">
+                            <!-- <li class="sidebar-menu-item">
                                 <a class="sidebar-menu-button" href="student-lessons.html">
                                     <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">dns</i>
                                     <span class="sidebar-menu-text">Browse Lessons</span>
@@ -638,7 +637,7 @@
                                     <span class="sidebar-menu-text">Tickets</span>
                                     <span class="badge badge-warning badge-notifications ml-auto">NEW</span>
                                 </a>
-                            </li>
+                            </li> -->
                             <li class="sidebar-menu-item">
                                 <a class="sidebar-menu-button" href="edit-account.html">
                                     <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">settings</i>
@@ -662,10 +661,10 @@
                                 <a class="sidebar-menu-button" href="author-dashboard.html">
                                     <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">dvr</i>
                                     <span class="sidebar-menu-text">Dashboard</span>
-                                    <span class="badge badge-warning rounded-circle badge-notifications ml-auto">8</span>
+                                    <span class="badge badge-warning rounded-circle badge-notifications ml-auto"></span>
                                 </a>
                             </li>
-                            <li class="sidebar-menu-item">
+                            <!-- <li class="sidebar-menu-item">
                                 <a class="sidebar-menu-button" href="author-courses.html">
                                     <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">layers</i>
                                     <span class="sidebar-menu-text">Courses</span>
@@ -695,7 +694,7 @@
                                     <span class="sidebar-menu-text">Tickets</span>
                                     <span class="badge badge-warning badge-notifications ml-auto">NEW</span>
                                 </a>
-                            </li>
+                            </li> -->
 
                             <li class="sidebar-menu-item">
                                 <a class="sidebar-menu-button" href="login.html">
@@ -706,23 +705,23 @@
                         </ul>
                     </div>
 
-                    <div class="sidebar-heading">Admin</div>
-                    <div class="sidebar-block p-0">
-                        <ul class="sidebar-menu mt-0">
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="admin-dashboard.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">dvr</i>
-                                    <span class="sidebar-menu-text">Dashboard</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="admin-trello.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">touch_app</i>
-                                    <span class="sidebar-menu-text">Trello</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                </div>
+                <!-- <div class="sidebar-heading">Admin</div>
+                <div class="sidebar-block p-0">
+                    <ul class="sidebar-menu mt-0">
+                        <li class="sidebar-menu-item">
+                            <a class="sidebar-menu-button" href="admin-dashboard.html">
+                                <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">dvr</i>
+                                <span class="sidebar-menu-text">Dashboard</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-menu-item">
+                            <a class="sidebar-menu-button" href="admin-trello.html">
+                                <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">touch_app</i>
+                                <span class="sidebar-menu-text">Trello</span>
+                            </a>
+                        </li>
+                    </ul> -->
                 </div>
             </div>
         </div>
