--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -368,10 +368,12 @@
                                 </div>
                                 <div class="col-lg-8 card-form__body card-body">
                                     <!--<label>Assignment Description</label>-->
-                                    <div id= "Description" class="h-150" data-toggle="quill" data-quill-placeholder="Quill WYSIWYG editor">
+                                    <div id= "editor-container">
+                                        <div>
                                         <h1>Moyai 🗿 moment</h1>
                                         <p>This editor is quite <strong>poggers</strong> and you too will <em>learn to love it</em></p>
                                         <p><br></p>
+                                    </div> 
                                     </div>
 
                                 </div>
