fixed some bugs

--- a/public/student-courses.html
+++ b/public/student-courses.html
@@ -374,7 +374,7 @@
                                                 <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
                                                 <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star_half</i></a>
                                             </span>
-                                            <strong>4.7</strong><br />
+                                            <strong id="ClassID"></strong><br />
                                             <small class="text-muted">(391 ratings)</small>
                                         </div>
                                         <div class="d-flex align-items-center">
