--- a/public/student-lessons.html
+++ b/public/student-lessons.html
@@ -355,15 +355,15 @@
                                             </a>
                                         </li>
                                         <li class="list-group-item">
-                                            <span class="mr-2">
+                                            <!-- <span class="mr-2">
                                                 <a href="#" class="rating-link active"><i class="material-icons">star</i></a>
                                                 <a href="#" class="rating-link active"><i class="material-icons">star</i></a>
                                                 <a href="#" class="rating-link active"><i class="material-icons">star</i></a>
                                                 <a href="#" class="rating-link active"><i class="material-icons">star</i></a>
                                                 <a href="#" class="rating-link active"><i class="material-icons">star_half</i></a>
-                                            </span>
-                                            <strong>4.7</strong>
-                                            <span class="text-muted">(391 ratings)</span>
+                                            </span> -->
+                                            <strong id="ClassCodes"></strong>
+                                            <!-- <span class="text-muted">(391 ratings)</span> -->
                                         </li>
 
                                         <li class="list-group-item">
